--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p class="fig"><img src="istockphoto-521375354-612x612.jpeg" alt="Снежный барс"></p>
         <p>
 
-        <h3>И́рбис, или сне́жный барс, или снежный леопард (лат. Panthera uncia, ранее — лат. Uncia uncia) — крупное
+        <h3>adИ́рбис, или сне́жный барс, или снежный леопард (лат. Panthera uncia, ранее — лат. Uncia uncia) — крупное
             хищное млекопитающее семейства кошачьих, обитающее в горах Центральной Азии. Единственный современный
             представитель семейства, проживающий исключительно в холодном климате.
             <br>
