--- a/index.html
+++ b/index.html
@@ -14,18 +14,24 @@
             text-align: center;
         }
     </style>
+    <link rel="stylesheet" href="fon.css">
 </head>
 
 <body>
     <header>
-   
-            <h1 style="text-align: center">Снежный барс</h1>
+        <ul class="menu-main">
+            <li><a href="" class="current">Work</a></li>
+            <li><a href="#ello">Авторские права</a></li>
+            <li><a href="#ella">Blog</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>
+        <h1 style="text-align: center">Снежный барс</h1>
 
     </header>
     <main>
-        <p class="fig"><img src="istockphoto-521375354-612x612.jpeg" alt="Снежный барс"></p>
+        <p class="fig"><img id="one" src="istockphoto-521375354-612x612.jpeg" alt="Снежный барс"></p>
         <p>
-
+            <a id="ella"></a>
         <h3>И́рбис, или сне́жный барс, или снежный леопард (лат. Panthera uncia, ранее — лат. Uncia uncia) — крупное
             хищное млекопитающее семейства кошачьих, обитающее в горах Центральной Азии. Единственный современный
             представитель семейства, проживающий исключительно в холодном климате.
@@ -53,9 +59,24 @@
         </h3>
 
         </p>
+        <hr>
+        <h1 style="text-align: center">Происхождение названия</h1>
+        <br>
+        <h3>Слово «ирбис» русские купцы-меховщики переняли у тюркских охотников в XVII веке. В Туве этого зверя называли
+        ирбиш, в Семиречье он назывался ильберс, к востоку от Алма-Аты в пограничных с Китаем районах — ирвиз, на
+        литературном языке тюрки́ — ирбиз. Это слово и прижилось в русском языке, со временем последняя буква изменилась
+        с «з» на «с».
+        В XVIII веке, но, очевидно, и раньше, в Сибири, а затем в Семиречье и в Средней Азии слово «барс», которым
+        называли леопарда, в народном использовании стало прилагаться и к ирбису (Uncia uncia). Из-за сходства обоих
+        видов это было вполне естественно. Впрочем, в пушной торговле в XVII веке упоминались и «ирбизы». В XIX — начале
+        XX века в русскоязычной зоологической литературе за Uncia uncia укрепилось название «снежный барс» (идентичное
+        по смыслу английскому, немецкому и французскому названиям) и ирбис (с тюркских и монгольского). Сам термин
+        «барс» остался за леопардом (Panthera pardus).</h3>
     </main>
     <footer>
-        <p>©Авторские права никому не принадлежат, 2050. Все права защищены.</p>
+        <a id="ello">
+            <p style="text-align: center">©Авторские права никому не принадлежат, 2050. Все права защищены.</p>
+        </a>
     </footer>
 </body>
 
