--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <main>
         <p class="fig"><img id="one" src="istockphoto-521375354-612x612.jpeg" alt="Снежный барс"></p>
-        <p>
+        <p class="text-orange">
             <a id="ella"></a>
         <h3>И́рбис, или сне́жный барс, или снежный леопард (лат. Panthera uncia, ранее — лат. Uncia uncia) — крупное
             хищное млекопитающее семейства кошачьих, обитающее в горах Центральной Азии. Единственный современный
@@ -59,7 +59,7 @@
         </h3>
 
         </p>
-        <hr>
+        <!--<hr> разделительная полоса-->
         <h1 style="text-align: center">Происхождение названия</h1>
         <br>
         <h3>Слово «ирбис» русские купцы-меховщики переняли у тюркских охотников в XVII веке. В Туве этого зверя называли
