--- a/indexdz.html
+++ b/indexdz.html
@@ -17,23 +17,23 @@
                 <td colspan="6">Player 1:</td>
             </tr>
             <tr>
-                <td id="black">2</td>
-                <td id="black">Q</td>
-                <td id="black">J</td>
-                <td id="red">6</td>
-                <td id="red">9</td>
-                <td id="red">A</td>
+                <td id="black">2♣</td>
+                <td id="black">Q♠</td>
+                <td id="black">J♣</td>
+                <td id="red">6♥</td>
+                <td id="red">9&hearts;</td>
+                <td id="red">A♦</td>
             </tr>
             <tr>
                 <td colspan="6">Player 2:</td>
             </tr>
             <tr>
-                <td id="black">2</td>
-                <td id="black">2</td>
-                <td id="black">2</td>
-                <td id="red">2</td>
-                <td id="red">2</td>
-                <td id="red">2</td>
+                <td id="black">A♣</td>
+                <td id="black">10♣</td>
+                <td id="black">8♠</td>
+                <td id="red">3♥</td>
+                <td id="red">K♦</td>
+                <td id="red">3♥</td>
             </tr>
         </table>
         <br><hr><br>
