--- a/indextoo.html
+++ b/indextoo.html
@@ -35,15 +35,15 @@
         [sign] (Pi) times the radius (r) squared:
         <br><br>
 
-        <h4 id="two"><a id="one">A = &#960;  ☓ r<sup><small>2</small></sup> </a></h4>
+        <h4 id="two"><a id="one">A = &#960;  &#215; r<sup><small>2</small></sup> </a></h4>
         <br><br>
         or, when you know the diameter (D):
         <br><br>
-        <h4 id="two"><a id="one">A = (&#960; / 4) [sign] D^2 </a></h4>
+        <h4 id="two"><a id="one">A = (&#960; / 4) &#215; D<sup><small>2</small></sup> </a></h4>
         <br><br>
         or, when you know the circumference (C):
         <br><br>
-        <h4 id="two"><a id="one">A = C^2 / 4 [sign] [sign]</a></h4>
+        <h4 id="two"><a id="one">A = C<sup><small>2</small></sup> / 4   &#215; &#960;</a></h4>
         <br><br>
 <sub></sub>
         <h2> Intersection</h2>
