--- a/indexdz.html
+++ b/indexdz.html
@@ -30,7 +30,7 @@
             <tr>
                 <td id="black">A♣</td>
                 <td id="black">10♣</td>
-                <td id="black">8♠</td>
+                <td id="black">8&#9824;</td>
                 <td id="red">3♥</td>
                 <td id="red">K♦</td>
                 <td id="red">3♥</td>
