--- a/indextoo.html
+++ b/indextoo.html
@@ -48,12 +48,12 @@
 <sub></sub>
         <h2> Intersection</h2>
 
-        The intersection of two sets A and B, denoted by A [sign] B, is the set of all objects that are members of both
+        The intersection of two sets A and B, denoted by A &#8745; B, is the set of all objects that are members of both
         the sets A and B. In symbols,
         <br><br>
-        <h4 id="two"><a id="one">A [sign] B = { x : x [sign] A and x [sign] B } </a></h4>
+        <h4 id="two"><a id="one">A &#8745; B = { x : x &#8712; A and x &#8712; B } </a></h4>
         <br><br>
-        That is, x is an element of the intersection A [sign] B if and only if x is both an element of A and an element
+        That is, x is an element of the intersection A &#8745; B if and only if x is both an element of A and an element
         of B.
     </main>
     <footer>
