--- a/indexdz.html
+++ b/indexdz.html
@@ -37,7 +37,7 @@
             </tr>
         </table>
         <br><hr><br>
-        <div class="nav"><a href="">Вернуться в Romeo</a></div>
+        <div class="nav"><a href="indexx.html">Вернуться в ROMEO AND JULIET</a></div>
     </main>
     <footer>
 
