--- a/indexdz.html
+++ b/indexdz.html
@@ -38,6 +38,7 @@
         </table>
         <br><hr><br>
         <div class="nav"><a href="indexx.html">Вернуться в ROMEO AND JULIET</a></div>
+        <div class="nav"><a href="indexxx.html">Перейти к третьему заданию</a></div>
     </main>
     <footer>
 
