--- a/indexx.html
+++ b/indexx.html
@@ -5,61 +5,62 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="fonxx.css">
 </head>
 <body>
     <header>
-       <h1 style="text-align: center"> ROMEO AND JULIET</h1>
+       <h1 style="text-align: center"> Romeo and Juliet</h1>
     </header>
     <main>
         <h3 tyle="text-align: left" >
-        Act 1
+           ACT 1</h3>
         <br>
-PROLOGUE
+<h3>PROLOGUE
+<br></h3>
+    Two households, both alike in dignity,
+    <br>
+    In fair Verona, where we lay our scene,
+    <br>
+    From ancient grudge break to new mutiny,
+    <br>
+    Where civil blood makes civil hands unclean.
+    <br>
+    From forth the fatal loins of these two foes
+    <br>
+    A pair of star-cross'd lovers take their life;
+    <br>
+    Whose misadventured piteous overthrows
+    <br>
+    Do with their death bury their parents' strife.
+    <br>
+    The fearful passage of their death-mark'd love,
+    <br>
+    And the continuance of their parents' rage,
+    <br>
+    Which, but their children's end, nought could remove,
+    <br>
+    Is now the two hours' traffic of our stage;
+    <br>
+    The which if you with patient ears attend,
+    <br>
+    What here shall miss, our toil shall strive to mend. 
 <br>
-Two households, both alike in dignity,
-<br>
-In fair Verona, where we lay our scene,
-<br>
-From ancient grudge, break to new mutiny,
-<br>
-Where civil blood makes civil hands unclean.
-<br>
-5From forth the fatal loins of these two foes
-<br>
-A pair of star-crossed lovers take their life,
-<br>
-Whose misadventured piteous overthrows°
-<br>
-Doth with their death bury their parents’ strife.
-<br>
-This fearful showing of their death-marked love,
-<br>
-And the exhibition of their parents’ rage
-<br>
-Which, but their children’s end, naught could remove
-<br>
-Is now the two hours’ traffic of our stage
-<br>
-That which–if you with patient ears attend
-<br>
-Here goes unsaid, our toil shall strive to mend.
-<br>
-SCENE I. Verona. A public place.
+<h3>SCENE I. Verona. A public place.</h3>
 <br>
 Enter SAMPSON and GREGORY, of the house of Capulet, armed with swords and bucklers
 <br>
-SAMPSON
+<h3>SAMPSON</h3>
 <br>
 Gregory, o' my word, we'll not carry coals.
 <br>
-GREGORY
+<h3>GREGORY</h3>
 <br>
 No, for then we should be colliers.
 
-</h2>
     </main>
     <footer>
-
+        <br>
+        <div class="nav"><a href="indexdz.html">Перейти к картам</a></div>
     </footer>
 </body>
 </html>
