--- a/figma/index.html
+++ b/figma/index.html
@@ -13,6 +13,7 @@
     <header>
     <div class="menu">
         <img src="Vector.png" alt="" >
+        <img src="W.png" id="logow" >
         <ul>
             <li><a href="">Главная</a></li>
             <li><a href="">Сеансы</a></li>
@@ -22,6 +23,9 @@
             <li><a href="">Обо мне</a></li>
             <li><a href="">Блог</a></li>
         </ul>
+        <form>
+            <button>Записаться на сеанс</button>
+        </form>
     </div>
     </header>
     <main>
