--- a/DZ/tables/index.html
+++ b/DZ/tables/index.html
@@ -12,11 +12,11 @@
     </header>
     <main>
         <ol>
-            <li><span>Apple</span></li>
-            <li><span>Orange</span></li>
-            <li><span>Pineapple</span></li>
-            <li><span>Pear</span></li>
-            <li><span>Cherry</span></li>
+            <li><span class="red">Apple</span></li>
+            <li><span class="red">Orange</span></li>
+            <li><span class="red">Pineapple</span></li>
+            <li><span class="red">Pear</span></li>
+            <li><span class="red">Cherry</span></li>
         </ol>
     </main>
     <footer>
