--- a/figma/index.html
+++ b/figma/index.html
@@ -11,22 +11,26 @@
 
 <body style="background-color: #162831;">
     <header>
-    <div class="menu">
-        <img src="Vector.png" alt="" >
-        <img src="W.png" id="logow" >
-        <ul>
-            <li><a href="">Главная</a></li>
-            <li><a href="">Сеансы</a></li>
-            <li><a href="">Отзовы</a></li>
-            <li><a href="">Контакты</a></li>
-            <li><a href="">Новости</a></li>
-            <li><a href="">Обо мне</a></li>
-            <li><a href="">Блог</a></li>
-        </ul>
-        <form>
-            <button>Записаться на сеанс</button>
-        </form>
-    </div>
+        <div class="menu">
+            <img src="Vector.png" id="logov" >
+            <img src="W.png" id="logow" >
+        </div>
+        <div class="nav">
+
+                <a href="">Главная</a>
+                <a href="">Сеансы</a>
+                <a href="">Отзовы</a>
+                <a href="">Контакты</a>
+                <a href="">Новости</a>
+                <a href="">Обо мне</a>
+                <a href="">Блог</a>
+  
+        </div>
+        <div class="batt">
+            <form>
+                <button>Записаться на сеанс</button>
+            </form>
+        </div>
     </header>
     <main>
         <div class="head_logo">
