--- a/figma/indexx.html
+++ b/figma/indexx.html
@@ -9,7 +9,10 @@
 </head>
 <body>
     <header>
-        <img src="Vector.png" alt="">
+        <div id="logo">
+            <img src="Vector.png" alt="">
+            <img src="W.png" alt="" id="logow">
+        </div>
         <nav>
             <a href="">Главная</a>
             <a href="">Сеансы</a>
