--- a/figma/index.html
+++ b/figma/index.html
@@ -8,8 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="fon.css">
 </head>
-
-<body style="background-color: #162831;">
+<body>
     <header>
         <div class="menu">
             <img src="Vector.png" id="logov" >
