--- a/figma/index.html
+++ b/figma/index.html
@@ -8,22 +8,23 @@
     <title>Document</title>
     <link rel="stylesheet" href="fon.css">
 </head>
+
 <body>
     <header>
         <div class="menu">
-            <img src="Vector.png" id="logov" >
-            <img src="W.png" id="logow" >
+            <img src="Vector.png" id="logov">
+            <img src="W.png" id="logow">
         </div>
         <div class="nav">
 
-                <a href="">Главная</a>
-                <a href="">Сеансы</a>
-                <a href="">Отзовы</a>
-                <a href="">Контакты</a>
-                <a href="">Новости</a>
-                <a href="">Обо мне</a>
-                <a href="">Блог</a>
-  
+            <a href="">Главная</a>
+            <a href="">Сеансы</a>
+            <a href="">Отзовы</a>
+            <a href="">Контакты</a>
+            <a href="">Новости</a>
+            <a href="">Обо мне</a>
+            <a href="">Блог</a>
+
         </div>
         <div class="batt">
             <form>
@@ -34,15 +35,78 @@
     <main>
         <div class="head_logo">
             <div class="head_text">
-                <p>
-                    Укрепление здоровья
-                </p>
-                <h2>
-                    Акватерапия RitmStyle
-                </h2>
+                <p>Укрепление здоровья</p>
+                <p class="text">Акватерапия<br>
+                    RitmStyle</p>
             </div>
         </div>
+        <div class="services">
+            <div id="servicestext">
+                <p>Сеансы RitmStyle</p>
+            </div>
+            <div class="servicesone">
+                <p class="textone">Стандартный RitmStyle</p>
+            </div>
+            <div class="servicestwo">
+                <p class="texttwo">RitmStyle для беременных</p>
+            </div>
+            <div class="servicesthree">
+                <p class="textthree">RitmStyle + красочная<br>
+                    подводная фотосессия</p>
+            </div>
+            <div class="servicesfour">
+                <p class="textfour">RitmStyle для пар</p>
+            </div>
+            <div class="servicesfive">
+                <p class="textfive">RitmStyle с полным<br>
+                    погружением под воду</p>
+            </div>
+        </div>
+        <div class="reviews">
+            <div id="heading">
+                <p>Отзовы</p>
+            </div>
+            <div class="review">
+                <p class="revie">Кира Иванова</p>
+                <p class="revi">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus diam risus morbi nulla
+                    dictum. Urna mi
+                    orci gravida placerat amet, eu, aliquet facilisis aliquet. Dolor praesent nam ornare fringilla enim
+                    nibh
+                    donec sit imperdiet. Amet, diam duis eu sit et. Volutpat vestibulum a lectus sed blandit.<br>
+                    Venenatis urna mattis eu enim molestie iaculis et aliquet. Velit in pellentesque vestibulum
+                    phasellus
+                    orci. Fermentum sed phasellus aliquam nulla non aenean. Quisque id nunc, mauris potenti a massa.
+                    Fermentum at elit, convallis leo dolor aliquet id elementum. Ullamcorper sociis et cum bibendum in
+                    egestas. Diam, urna, sed tempus mollis aliquam elit. Facilisi nam nulla pulvinar mauris vel lacinia
+                    venenatis.</p>
+            </div>
+            <div class="reviewtwo">
+                <p class="revietwo">Александра Дмитриева</p>
+                <p class="revitwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur nulla viverra
+                    egestas tellus. Cursus scelerisque phasellus netus proin. Etiam mauris maecenas facilisis faucibus
+                    mauris eleifend purus. Purus dictum vulputate elementum mauris amet.
+                    Hendrerit sit cras ullamcorper morbi quam vitae ante nibh. Ornare ipsum mi nisl augue placerat
+                    lacus. Dolor ipsum fermentum viverra bibendum faucibus urna. Arcu, ut sed tellus lacus quisque diam.
+                    Semper sed aenean in etiam mus praesent diam semper in. Pretium id a amet, massa ligula nibh
+                    faucibus ornare. Ut aenean rhoncus sed nam ut diam dapibus. Risus nibh faucibus eu vestibulum
+                    tempor, quis ultrices mauris. Porta enim, donec odio sagittis, eget velit at. </p>
+            </div>
+            <div class="reviewthree">
+                <p class="reviethree">Яна Жернова </p>
+                <p class="revithree">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacinia eget mattis orci
+                    aliquam enim tincidunt gravida aliquet ut. Ipsum vulputate morbi felis, lobortis tincidunt. Pretium
+                    dictum odio feugiat auctor diam sit viverra gravida. Lobortis arcu rhoncus, mi mi vitae feugiat
+                    amet, vitae ac. Cursus diam turpis iaculis nisi sit. Vel blandit et sit elit vestibulum feugiat
+                    proin tempor, justo. Diam commodo, pellentesque at porttitor tristique faucibus faucibus morbi.
+                    Bibendum pretium lacus, tempus viverra vitae odio nunc eget.
+                    Tortor fermentum orci neque sed. Mauris faucibus diam lorem erat ullamcorper donec egestas neque.
+                    Maecenas malesuada mauris magnis sed id. Luctus vitae justo, in consectetur arcu. Nulla feugiat at
+                    eu in aliquet. Diam nunc, libero mauris tellus suspendisse morbi sagittis semper. </p>
+            </div>
+            <div>
 
+            </div>
+        </div>
     </main>
     <footer>
         <div class="maps">
