--- a/figma/indexx.html
+++ b/figma/indexx.html
@@ -70,7 +70,9 @@
                 <p>Подарочный сертификат</p>
             </div>
         </div>
-
+        <div class="my-element">
+            Пример элемента
+        </div>
     </main>
     <footer>
 
