--- a/figma/index.html
+++ b/figma/index.html
@@ -73,6 +73,7 @@
                     orci gravida placerat amet, eu, aliquet facilisis aliquet. Dolor praesent nam ornare fringilla enim
                     nibh
                     donec sit imperdiet. Amet, diam duis eu sit et. Volutpat vestibulum a lectus sed blandit.<br>
+                    <br>
                     Venenatis urna mattis eu enim molestie iaculis et aliquet. Velit in pellentesque vestibulum
                     phasellus
                     orci. Fermentum sed phasellus aliquam nulla non aenean. Quisque id nunc, mauris potenti a massa.
@@ -85,8 +86,9 @@
                 <p class="revitwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur nulla viverra
                     egestas tellus. Cursus scelerisque phasellus netus proin. Etiam mauris maecenas facilisis faucibus
                     mauris eleifend purus. Purus dictum vulputate elementum mauris amet.
+                    <br><br>
                     Hendrerit sit cras ullamcorper morbi quam vitae ante nibh. Ornare ipsum mi nisl augue placerat
-                    lacus. Dolor ipsum fermentum viverra bibendum faucibus urna. Arcu, ut sed tellus lacus quisque diam.
+                    lacus. Dolor ipsum fermentum viverra bibendum faucibus urna. Arcu, ut sed tellus lacus quisque diam.\
                     Semper sed aenean in etiam mus praesent diam semper in. Pretium id a amet, massa ligula nibh
                     faucibus ornare. Ut aenean rhoncus sed nam ut diam dapibus. Risus nibh faucibus eu vestibulum
                     tempor, quis ultrices mauris. Porta enim, donec odio sagittis, eget velit at. </p>
@@ -99,12 +101,16 @@
                     amet, vitae ac. Cursus diam turpis iaculis nisi sit. Vel blandit et sit elit vestibulum feugiat
                     proin tempor, justo. Diam commodo, pellentesque at porttitor tristique faucibus faucibus morbi.
                     Bibendum pretium lacus, tempus viverra vitae odio nunc eget.
+                    <br><br>
                     Tortor fermentum orci neque sed. Mauris faucibus diam lorem erat ullamcorper donec egestas neque.
                     Maecenas malesuada mauris magnis sed id. Luctus vitae justo, in consectetur arcu. Nulla feugiat at
                     eu in aliquet. Diam nunc, libero mauris tellus suspendisse morbi sagittis semper. </p>
             </div>
             <div>
-
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
             </div>
         </div>
     </main>
