--- a/figma/index.html
+++ b/figma/index.html
@@ -79,7 +79,8 @@
                     orci. Fermentum sed phasellus aliquam nulla non aenean. Quisque id nunc, mauris potenti a massa.
                     Fermentum at elit, convallis leo dolor aliquet id elementum. Ullamcorper sociis et cum bibendum in
                     egestas. Diam, urna, sed tempus mollis aliquam elit. Facilisi nam nulla pulvinar mauris vel lacinia
-                    venenatis.</p>
+                    venenatis.
+                </p>
             </div>
             <div class="reviewtwo">
                 <p class="revietwo">Александра Дмитриева</p>
@@ -88,10 +89,12 @@
                     mauris eleifend purus. Purus dictum vulputate elementum mauris amet.
                     <br><br>
                     Hendrerit sit cras ullamcorper morbi quam vitae ante nibh. Ornare ipsum mi nisl augue placerat
-                    lacus. Dolor ipsum fermentum viverra bibendum faucibus urna. Arcu, ut sed tellus lacus quisque diam.\
+                    lacus. Dolor ipsum fermentum viverra bibendum faucibus urna. Arcu, ut sed tellus lacus quisque
+                    diam.\
                     Semper sed aenean in etiam mus praesent diam semper in. Pretium id a amet, massa ligula nibh
                     faucibus ornare. Ut aenean rhoncus sed nam ut diam dapibus. Risus nibh faucibus eu vestibulum
-                    tempor, quis ultrices mauris. Porta enim, donec odio sagittis, eget velit at. </p>
+                    tempor, quis ultrices mauris. Porta enim, donec odio sagittis, eget velit at.
+                </p>
             </div>
             <div class="reviewthree">
                 <p class="reviethree">Яна Жернова </p>
@@ -104,20 +107,57 @@
                     <br><br>
                     Tortor fermentum orci neque sed. Mauris faucibus diam lorem erat ullamcorper donec egestas neque.
                     Maecenas malesuada mauris magnis sed id. Luctus vitae justo, in consectetur arcu. Nulla feugiat at
-                    eu in aliquet. Diam nunc, libero mauris tellus suspendisse morbi sagittis semper. </p>
+                    eu in aliquet. Diam nunc, libero mauris tellus suspendisse morbi sagittis semper.
+                </p>
             </div>
-            <div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+            <div class="control">
             </div>
+        </div>
+        <div>
+            <div id="headingtwo">
+                <p>Об RitmStyle</p>
+            </div>
+            <div class="group5">
+                <p class="grou5">RitmStyle массаж</p>
+                <p class="gro5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in purus, sed tellus eget
+                    mattis nibh quam. Eu ornare nunc, id est. Erat consectetur etiam a sit diam in imperdiet amet. Diam
+                    nisl, ipsum suscipit amet. Eleifend amet habitasse proin quis adipiscing.
+                    <br><br>
+                    Nisl convallis mauris in consequat. Sit ac vitae posuere maecenas dictumst quam. Felis amet diam,
+                    non augue massa. Egestas molestie lobortis rhoncus, elit nulla nisl. Habitant tortor at tempor.
+                </p>
+            </div>
+            <div class="group4">
+                <p class="grou4">RitmStyle гидротерапия</p>
+                <p class="gro4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu cras quis ac a non ut
+                    viverra turpis eget. Hendrerit quis pulvinar massa ipsum sem. Donec posuere nulla enim non neque
+                    etiam. Eros arcu, pulvinar penatibus luctus ridiculus sagittis vel nunc hac. Nisi, diam tincidunt
+                    dui viverra. Eget quis ultricies sem nunc risus senectus luctus ultricies. Enim feugiat pharetra
+                    pharetra et.
+                    <br><br>
+                    Pulvinar arcu at morbi posuere cursus. Fermentum est sit enim velit ornare molestie. Ipsum nisi id
+                    sed tempor elementum. Mi nunc eget pellentesque ipsum. Suspendisse risus a id vel massa tincidunt.
+                    Hendrerit blandit in augue vel mi quam magna egestas. Fringilla ac lacus viverra ullamcorper leo,
+                    enim vitae id aliquam. Magna sed tristique tellus enim, netus tempor at elit dui. Ullamcorper
+                    hendrerit feugiat libero tellus diam egestas dui tellus odio.</p>
+            </div>
+            <div class="rectan">
+
+            </div>
+            <div class="rectanone">
+
+            </div>
+        </div>
+        <div class="price">
+
+        </div>
+        <div class="contacts">
+
         </div>
     </main>
     <footer>
         <div class="maps">
-            <script type="text/javascript" charset="utf-8" async
-                src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ac6867a83f740f94ec807b73fc42c0245b861c477581ccb519c4ca7a2d30bac53&amp;width=600&amp;height=450&amp;lang=ru_RU&amp;scroll=true"></script>
+            
         </div>
     </footer>
 </body>
