--- a/index.html
+++ b/index.html
@@ -5,78 +5,160 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Домашнее задание!</title>
-    <link rel="book_read_reading_learning_education_eco_ecology_icon_252559"
-        href="book_read_reading_learning_education_eco_ecology_icon_252559.ico"
-        type="book_read_reading_learning_education_eco_ecology_icon_252559">
-    <style>
-        .fig {
-            text-align: center;
-        }
-    </style>
+    <title>Document</title>
     <link rel="stylesheet" href="fon.css">
 </head>
 
 <body>
     <header>
-        <ul class="menu-main">
-            <li><a href="" class="current">Work</a></li>
-            <li><a href="#ello">Авторские права</a></li>
-            <li><a href="#ella">Blog</a></li>
-            <li><a href="">Contact</a></li>
-        </ul>
-        <h1 style="text-align: center">Снежный барс</h1>
+        <div class="menu">
+            <img src="Vector.png" id="logov">
+            <img src="W.png" id="logow">
+        </div>
+        <div class="nav">
 
+            <a href="">Главная</a>
+            <a href="">Сеансы</a>
+            <a href="">Отзовы</a>
+            <a href="">Контакты</a>
+            <a href="">Новости</a>
+            <a href="">Обо мне</a>
+            <a href="">Блог</a>
+
+        </div>
+        <div class="batt">
+            <form>
+                <button>Записаться на сеанс</button>
+            </form>
+        </div>
     </header>
     <main>
-        <p class="fig"><img id="one" src="istockphoto-521375354-612x612.jpeg" alt="Снежный барс"></p>
-        <p class="text-orange">
-            <a id="ella"></a>
-        <h3>И́рбис, или сне́жный барс, или снежный леопард (лат. Panthera uncia, ранее — лат. Uncia uncia) — крупное
-            хищное млекопитающее семейства кошачьих, обитающее в горах Центральной Азии. Единственный современный
-            представитель семейства, проживающий исключительно в холодном климате.
-            <br>
-            Ирбис отличается тонким, длинным, гибким телом, относительно короткими лапами, небольшой головой и очень
-            длинным
-            хвостом. Достигая вместе с хвостом длины 200—230 см, имеет массу до 55 кг. Окраска меха светлая
-            дымчато-серая с
-            кольцеобразными и сплошными тёмными пятнами.
-            <br>
-            В силу труднодоступности местообитания и низкой плотности вида до сих пор остаются малоисследованными многие
-            аспекты его биологии.
-            <br>
-            В настоящее время численность ирбисов катастрофически мала — популяция вида в 2003 году по различным оценкам
-            составляла от 4 до 7 тысяч особей, в 2020 году от 2,7 до 3,4 тысяч. В XX веке он был внесён в Красную
-            книгу МСОП, в Красную книгу России, а также в охранные документы других стран. Охота на снежного барса
-            запрещена
-            во всех странах, где он обитает, снежный барс также внесён в приложение I Конвенции CITES (международный
-            запрет
-            на торговлю исчезающими видами животных и их частями). С 2013 года 12 странами, где обитает снежный барс,
-            принята «Глобальная программа по сохранению снежного барса и его экосистем», предусматривающая специальные
-            меры
-            по его сохранению (борьба с браконьерством, создание особо охраняемых природных территорий, субсидирование
-            фермеров в случае потери домашнего скота от снежного барса и т. д.)
-        </h3>
+        <div class="head_logo">
+            <div class="head_text">
+                <p>Укрепление здоровья</p>
+                <p class="text">Акватерапия<br>
+                    RitmStyle</p>
+            </div>
+        </div>
+        <div class="services">
+            <div id="servicestext">
+                <p>Сеансы RitmStyle</p>
+            </div>
+            <div class="servicesone">
+                <p class="textone">Стандартный RitmStyle</p>
+            </div>
+            <div class="servicestwo">
+                <p class="texttwo">RitmStyle для беременных</p>
+            </div>
+            <div class="servicesthree">
+                <p class="textthree">RitmStyle + красочная<br>
+                    подводная фотосессия</p>
+            </div>
+            <div class="servicesfour">
+                <p class="textfour">RitmStyle для пар</p>
+            </div>
+            <div class="servicesfive">
+                <p class="textfive">RitmStyle с полным<br>
+                    погружением под воду</p>
+            </div>
+        </div>
+        <div class="reviews">
+            <div id="heading">
+                <p>Отзовы</p>
+            </div>
+            <div class="review">
+                <p class="revie">Кира Иванова</p>
+                <p class="revi">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Netus diam risus morbi nulla
+                    dictum. Urna mi
+                    orci gravida placerat amet, eu, aliquet facilisis aliquet. Dolor praesent nam ornare fringilla enim
+                    nibh
+                    donec sit imperdiet. Amet, diam duis eu sit et. Volutpat vestibulum a lectus sed blandit.<br>
+                    <br>
+                    Venenatis urna mattis eu enim molestie iaculis et aliquet. Velit in pellentesque vestibulum
+                    phasellus
+                    orci. Fermentum sed phasellus aliquam nulla non aenean. Quisque id nunc, mauris potenti a massa.
+                    Fermentum at elit, convallis leo dolor aliquet id elementum. Ullamcorper sociis et cum bibendum in
+                    egestas. Diam, urna, sed tempus mollis aliquam elit. Facilisi nam nulla pulvinar mauris vel lacinia
+                    venenatis.
+                </p>
+            </div>
+            <div class="reviewtwo">
+                <p class="revietwo">Александра Дмитриева</p>
+                <p class="revitwo">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consectetur nulla viverra
+                    egestas tellus. Cursus scelerisque phasellus netus proin. Etiam mauris maecenas facilisis faucibus
+                    mauris eleifend purus. Purus dictum vulputate elementum mauris amet.
+                    <br><br>
+                    Hendrerit sit cras ullamcorper morbi quam vitae ante nibh. Ornare ipsum mi nisl augue placerat
+                    lacus. Dolor ipsum fermentum viverra bibendum faucibus urna. Arcu, ut sed tellus lacus quisque
+                    diam.\
+                    Semper sed aenean in etiam mus praesent diam semper in. Pretium id a amet, massa ligula nibh
+                    faucibus ornare. Ut aenean rhoncus sed nam ut diam dapibus. Risus nibh faucibus eu vestibulum
+                    tempor, quis ultrices mauris. Porta enim, donec odio sagittis, eget velit at.
+                </p>
+            </div>
+            <div class="reviewthree">
+                <p class="reviethree">Яна Жернова </p>
+                <p class="revithree">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lacinia eget mattis orci
+                    aliquam enim tincidunt gravida aliquet ut. Ipsum vulputate morbi felis, lobortis tincidunt. Pretium
+                    dictum odio feugiat auctor diam sit viverra gravida. Lobortis arcu rhoncus, mi mi vitae feugiat
+                    amet, vitae ac. Cursus diam turpis iaculis nisi sit. Vel blandit et sit elit vestibulum feugiat
+                    proin tempor, justo. Diam commodo, pellentesque at porttitor tristique faucibus faucibus morbi.
+                    Bibendum pretium lacus, tempus viverra vitae odio nunc eget.
+                    <br><br>
+                    Tortor fermentum orci neque sed. Mauris faucibus diam lorem erat ullamcorper donec egestas neque.
+                    Maecenas malesuada mauris magnis sed id. Luctus vitae justo, in consectetur arcu. Nulla feugiat at
+                    eu in aliquet. Diam nunc, libero mauris tellus suspendisse morbi sagittis semper.
+                </p>
+            </div>
+            <div class="control">
+            </div>
+        </div>
+        <div>
+            <div id="headingtwo">
+                <p>Об RitmStyle</p>
+            </div>
+            <div class="group5">
+                <p class="grou5">RitmStyle массаж</p>
+                <p class="gro5">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec in purus, sed tellus eget
+                    mattis nibh quam. Eu ornare nunc, id est. Erat consectetur etiam a sit diam in imperdiet amet. Diam
+                    nisl, ipsum suscipit amet. Eleifend amet habitasse proin quis adipiscing.
+                    <br><br>
+                    Nisl convallis mauris in consequat. Sit ac vitae posuere maecenas dictumst quam. Felis amet diam,
+                    non augue massa. Egestas molestie lobortis rhoncus, elit nulla nisl. Habitant tortor at tempor.
+                </p>
+            </div>
+            <div class="group4">
+                <p class="grou4">RitmStyle гидротерапия</p>
+                <p class="gro4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Arcu cras quis ac a non ut
+                    viverra turpis eget. Hendrerit quis pulvinar massa ipsum sem. Donec posuere nulla enim non neque
+                    etiam. Eros arcu, pulvinar penatibus luctus ridiculus sagittis vel nunc hac. Nisi, diam tincidunt
+                    dui viverra. Eget quis ultricies sem nunc risus senectus luctus ultricies. Enim feugiat pharetra
+                    pharetra et.
+                    <br><br>
+                    Pulvinar arcu at morbi posuere cursus. Fermentum est sit enim velit ornare molestie. Ipsum nisi id
+                    sed tempor elementum. Mi nunc eget pellentesque ipsum. Suspendisse risus a id vel massa tincidunt.
+                    Hendrerit blandit in augue vel mi quam magna egestas. Fringilla ac lacus viverra ullamcorper leo,
+                    enim vitae id aliquam. Magna sed tristique tellus enim, netus tempor at elit dui. Ullamcorper
+                    hendrerit feugiat libero tellus diam egestas dui tellus odio.</p>
+            </div>
+            <div class="rectan">
 
-        </p>
-        <!--<hr> разделительная полоса-->
-        <h1 style="text-align: center">Происхождение названия</h1>
-        <br>
-        <h3>Слово «ирбис» русские купцы-меховщики переняли у тюркских охотников в XVII веке. В Туве этого зверя называли
-        ирбиш, в Семиречье он назывался ильберс, к востоку от Алма-Аты в пограничных с Китаем районах — ирвиз, на
-        литературном языке тюрки́ — ирбиз. Это слово и прижилось в русском языке, со временем последняя буква изменилась
-        с «з» на «с».
-        В XVIII веке, но, очевидно, и раньше, в Сибири, а затем в Семиречье и в Средней Азии слово «барс», которым
-        называли леопарда, в народном использовании стало прилагаться и к ирбису (Uncia uncia). Из-за сходства обоих
-        видов это было вполне естественно. Впрочем, в пушной торговле в XVII веке упоминались и «ирбизы». В XIX — начале
-        XX века в русскоязычной зоологической литературе за Uncia uncia укрепилось название «снежный барс» (идентичное
-        по смыслу английскому, немецкому и французскому названиям) и ирбис (с тюркских и монгольского). Сам термин
-        «барс» остался за леопардом (Panthera pardus).</h3>
+            </div>
+            <div class="rectanone">
+
+            </div>
+        </div>
+        <div class="price">
+
+        </div>
+        <div class="contacts">
+
+        </div>
     </main>
     <footer>
-        <a id="ello">
-            <p style="text-align: center">©Авторские права никому не принадлежат, 2050. Все права защищены.</p>
-        </a>
+        <div class="maps">
+            
+        </div>
     </footer>
 </body>
 
